Maybe fix card overlap issue

--- a/app/assets/stylesheets/card_cube.css
+++ b/app/assets/stylesheets/card_cube.css
@@ -6,8 +6,7 @@
 }
 
 .card-show.cube-wrap {
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
 }
 
 .card-show .front-face, .card-show .bottom-face {
